# jNO

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.cuda  LICENSE  README.md  mode_summary.txt  paper.md  poseidon_helmholtz.py  pyproject.toml  pytest.ini  references.bib  tree.txt  trial.py
.github/agents/: redundancy-review.agent.md
.github/workflows/: docker-release.yml  joss-draft-pdf.yml  lint.yml  publish-pypi.yml  python-package.yml  typecheck.yml
docs/: Adaptive-Resampling.md  Differential-Operators.md  Docker.md  Domain-and-Geometry.md  Examples.md  Getting-Started.md  Home.md  Hyperparameter-Tuning.md  Model-Controls.md  Neural-Network-Architectures.md  Save-Load-and-Configuration.md  Training.md
docs/wiki/: Architecture-Search.md  Custom-Models.md  Domain-and-Meshing.md  Examples.md  FAQ.md  Home.md  LoRA-and-Fine-Tuning.md  Operator-Learning.md
examples/: allen_cahn2d.py  coupled_system.py  heat_equation.py  helmholtz_F.py  helmholtz_L_neuman.py  helmholtz_neuman.py  helmholtz_robin_fem.py  helmhoty_newapi_dirich.py  inverse_learning.py  laplace1D.py  poisson1d.py  poisson2d.py  poisson_neuman_newapi.py  poisson_new_api.py  poisson_varpinn.py  reaction_diffusion.py  stationary_Allen_cahn.py  test_elasticity.py  tuner.py
examples/01_basics/: biharmonic_1d.py  laplace_1d.py  poisson_1d.py
examples/02_elliptic/: anisotropic_poisson_2d.py  diffusion_reaction_1d.py  helmholtz_2d.py  mixed_boundary_poisson_2d.py  variable_coefficient_poisson_2d.py
examples/03_parabolic/: allen_cahn_2d.py  heat_1d.py  heat_2d.py  reaction_diffusion_2d.py
examples/operator_learning/: fem_solution.py  operator_learning.py
examples/poseidon/: create_domain.py  inference.ipynb  poisson_run.py
jno/: __init__.py  _trial_.ipynb  callback.py  core.py  core_utilities.py  differential_operators.py  domain.py  fem_route.py  fn.py  jnp_ops.py  numpy.py  trace.py  trace_compiler.py  trace_evaluator.py  tuner.py  weak_form.py
jno/architectures/: cno.py  common.py  deeponet.py  fno.py  geofno.py  gnot.py  linear.py  lora_linear.py  mgno.py  mlp.py  models.py  pcno.py  pit.py  pointnet.py  transformer.py  trmc.py  unet.py
jno/domain/: __init__.py  boundary_region.py  domain_class.py  domain_data.py  geometries.py  mesh_utils.py  meshio_mixin.py
jno/resampling/: __init__.py  base.py  cr3.py  ha.py  pinnfluence.py  r3.py  rad.py  random.py  rard.py
jno/utils/: __init__.py  adaptive.py  callbacks.py  config.py  espinn.py  fem_route.py  iree.py  load_save.py  logger.py  lora.py  monitor.py  statistics.py  weak_form.py
jno/utils/adaptive/: __init__.py  lrscheduler.py  weights.py
tests/: conftest.py  test_adaptive.py  test_adaptive_package.py  test_checkpointing.py  test_config.py  test_core_device.py  test_derivatives.py  test_domain_export.py  test_domain_geometries.py  test_domain_load_mesh.py  test_domain_normals.py  test_encrypted_save_load.py  test_fem_integration.py  test_flax_wrapper.py  test_fn_adaptive.py  test_fn_pdes.py  test_foundax_eqx.py  test_integration.py  test_iree.py  test_logger.py  test_models.py  test_numpy.py  test_resampling.py  test_trace.py  test_trace_evaluator.py  test_tutorial_examples_smoke.py  test_vpinn_integration.py  test_wandb_integration.py
tests/tutorial_examples_tests/01_basics/: biharmonic_1d.py  laplace_1d.py  poisson_1d.py
tests/tutorial_examples_tests/02_elliptic/: anisotropic_poisson_2d.py  diffusion_reaction_1d.py  helmholtz_2d.py  mixed_boundary_poisson_2d.py  poisson_2d.py  variable_coefficient_poisson_2d.py
tests/tutorial_examples_tests/03_parabolic/: allen_cahn_2d.py  heat_1d.py  heat_2d.py  mode_summary.txt  reaction_diffusion_2d.py
tests/tutorial_examples_tests/04_hyperbolic/: advection_diffusion_1d.py  burgers_viscous_1d.py  convection_reaction_diffusion_2d.py  telegraph_1d.py  wave_1d.py
tests/tutorial_examples_tests/05_coupled_and_inverse/: coupled_elliptic_2d.py  coupled_parabolic_2d.py  inverse_parameter.py
tests/tutorial_examples_tests/07_operator_architectures/: cgptno_poisson.py  cno2d_poisson.py  create_domain.py  deeponet_poisson.py  deeponet_stitched_geometries.py  fno2d_poisson.py  geofno2d_poisson.py  mgno2d_poisson.py  pit_poisson.py  poisson_inference.py  unet2d_poisson.py
tests/tutorial_examples_tests/08_fem_and_varpinns/: diffusion_reaction_robinBC.py  helmholtz_3D.py  helmholtz_mixedBC_fem_varpinn.py  poisson_2d_fem.py  stationary_allen_cahn_fem.py
wiki/: Architecture-Guide.md  Installation.md  Logging-and-Callbacks.md  Parallelism.md  Training-and-Solving.md  jno.numpy-API.md
