[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "jNO"
version = "0.1.0"
description = "Jax Neural Operators"
readme = "README.md"
requires-python = ">=3.11, <3.14"
authors = [{ name = "Leon Armbruster", email = "leonarmbruster@iisb.fraunhofer.de" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "jax",
    "equinox",
    "optax",

    "pygmsh",
    "cloudpickle",
    "einops",
]

[project.urls]
Homepage = "https://github.com/FhG-IISB/jno"
Documentation = "https://fhg-iisb.github.io/jNO_docs/"
Source = "https://github.com/FhG-IISB/jno"
Issues = "https://github.com/FhG-IISB/jno/issues"

[project.optional-dependencies]
cuda = [
    "jax[cuda12]"
]
dev = ["pytest>=7.0", 
"black>=22.0", 
"flake8>=4.0", 
"mypy>=0.950", 
"matplotlib", 
"paramax", 
"flax", 
"xprof", 
"pylotte", 
"nevergrad", 
"lineax", "jax-fem @git+https://github.com/FhG-IISB/jax-fem", "pyfiglet", "fenics-basix",]
iree = [
    "iree-base-compiler",
    "iree-base-runtime"
]
foundation = [
    "jax_morph @git+https://github.com/armbrusl/jax_morph",
    "jax_mpp @git+https://github.com/armbrusl/jax_mpp",
]
fem = [
    "lineax",
    "jax-fem @git+https://github.com/FhG-IISB/jax-fem",
     "pyfiglet", 
     "fenics-basix"
]


[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["jno*"]

[tool.setuptools.package-data]
jno = ["py.typed"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.black]
line-length = 250

[tool.mypy]
exclude = '^(build/|jNO\.egg-info/|runs/)'

[tool.uv.sources]
jno = { workspace = true}

[dependency-groups]
dev = [
    "jno",
]